Auto depth not working with multires in sculpt mode #67259

Closed
opened 2019-07-19 21:48:51 +02:00 by Bob Smith · 11 comments

System Information
Operating system: Xubuntu 18.10
Graphics card: Geforce GTS 250

Blender Version
Broken: c2e8e249ac

Short description of error
Auto depth doesn't work with multires in sculpt mode.

Exact steps for others to reproduce the error
Have auto depth turned on, then add a multires modifier to the default cube and subdivide once. In sculpt mode the view doesn't pivot around where it should.

**System Information** Operating system: Xubuntu 18.10 Graphics card: Geforce GTS 250 **Blender Version** Broken: c2e8e249acf9 **Short description of error** Auto depth doesn't work with multires in sculpt mode. **Exact steps for others to reproduce the error** Have auto depth turned on, then add a multires modifier to the default cube and subdivide once. In sculpt mode the view doesn't pivot around where it should.
Author

Added subscriber: @uvwxyz

Added subscriber: @uvwxyz
Sergey Sharybin was assigned by Sebastian Parborg 2019-07-29 12:30:22 +02:00
Member

Added subscribers: @ZedDB, @lichtwerk

Added subscribers: @ZedDB, @lichtwerk
Member

Seems to be working fine here?
#67259.blend

@ZedDB : Is the file above failing for you, too?

Seems to be working fine here? [#67259.blend](https://archive.blender.org/developer/F7635135/T67259.blend) @ZedDB : Is the file above failing for you, too?

Added subscriber: @DanielPaul

Added subscriber: @DanielPaul

Also noticed a small input lag while Auto Depth is activated, that didn't occur in 2.79.
Especially noticeable in bigger scenes (over 5 mill Polys)

The lag is pretty small, but noticeable. Takes away a little bit of the premium feeling blender has in the viewport without Auto depth.

Also noticed a small input lag while Auto Depth is activated, that didn't occur in 2.79. Especially noticeable in bigger scenes (over 5 mill Polys) The lag is pretty small, but noticeable. Takes away a little bit of the premium feeling blender has in the viewport without Auto depth.

@lichtwerk yes, I can reproduce it with that file too. Enable "auto depth" and "zoom to mouse cursor". Position the mouse on the cube and zoom in. Notice that it stops while inside the cube.
Apply the multi res modifier and do the same. Now you can zoom past the cube.

@lichtwerk yes, I can reproduce it with that file too. Enable "auto depth" and "zoom to mouse cursor". Position the mouse on the cube and zoom in. Notice that it stops while inside the cube. Apply the multi res modifier and do the same. Now you can zoom past the cube.

Added subscriber: @mano-wii

Added subscriber: @mano-wii

This isn't really my area: is something to do with depth picking from viewport.
@mano-wii, something you are familiar with?

This isn't really my area: is something to do with depth picking from viewport. @mano-wii, something you are familiar with?
Sergey Sharybin was unassigned by Germano Cavalcante 2019-08-01 16:29:25 +02:00
Germano Cavalcante self-assigned this 2019-08-01 16:29:25 +02:00

Added subscriber: @Sergey

Added subscriber: @Sergey

This issue was referenced by 52f83011c8

This issue was referenced by 52f83011c8f0f4219cfc6b3a1b2d2e7104391f82

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#67259
No description provided.